# PDFFiles

./: CMakeLists.txt  CMakeSettings.json
src/: Component.cpp  Component.h  FileSystemUtils.cpp  FileSystemUtils.h  GdiplusManager.cpp  GdiplusManager.h  ImageProcessor.cpp  ImageProcessor.h  Logger.cpp  Logger.h  PDFFiles.cpp  PDFFiles.h  PdfProcessor.cpp  PdfProcessor.h  PdfSplitManager.cpp  PdfSplitManager.h  StringConverter.cpp  StringConverter.h  VariantUtils.cpp  VariantUtils.h  addin.def  exports.cpp
